2004/07/18 21:00 (-0400) muppetman

	* README, NEWS, Glib.pm: unstable development release 1.052

2004/07/18 21:00 (-0400) muppetman

	* GObject.xs: one last bug; always prefer to create the key with an
	underscore in its name.  this preserves the semantics of the old
	property stuff from Glib::Object::Subclass::SET_PROPERTY(), although
	it means we'll always try twice on keys with no dashes.

	* Subclass.pm: remove the CHECK block (and the associated bugs) by
	changing how Subclass works.  we now rely on the new default property 
	handlers, and thus have no further need for GET_PROPERTY() and
	SET_PROPERTY(); by prepending Glib::Object::Subclass to the new
	class's @ISA, we can inherit new() normally.  tested extensively in
	my sandbox and a couple of people reported that all was well.

	* t/f.t: yes, it's bad form to change the tests to fit the code, but
	this test was verifying old behavior that we can't produce any longer,
	and which was actually quite annoying in practice.  verify the new
	semantics.

2004/07/12 20:42 (+0200) kaffeetisch

	* typemap: Make the OUTPUT variant of T_GPERL_GENERIC_WRAPPER do
	the same as the INPUT one -- that is, strip leading "const"'s and
	trailing asterisks from the type.

2004/06/28 00:47 (-0400) muppetman

	* Glib.pm, README, NEWS: unstable development release 1.051

2004/06/28 00:40 (-0400) muppetman

	* GType.xs: document the new property stuff.

2004/06/28 00:27 (-0400) muppetman

	* GValue.xs: handle undef gracefully in gperl_value_from_sv(); let
	the GValue default.

2004/06/28 00:17 (-0400) muppetman

	* GObject.xs, GType.xs, t/f.t: add new semantics for Glib::Object
	properties.  when no GET_PROPERTY or SET_PROPERTY is defined, fall
	back to using the key in the wrapper hash with the same name as the
	property; also allow creation of properties with explicit getter and
	setter functions, which override [SG]ET_PROPERTY and the fallback.
	discussion of the ideas here is archived in the mailing list: